Testing git commit

--- a/Day 1 (Introduction to NumPy & Matplotlib)/Comprehension.ipynb
+++ b/Day 1 (Introduction to NumPy & Matplotlib)/Comprehension.ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### List  Comprehensipon"
+    "# Testing the GIT in VS code "
    ]
   },
   {
@@ -13,29 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 4, 9, 16, 25]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example list\n",
-    "numbers = [1, 2, 3, 4, 5]\n",
-    "\n",
-    "# List comprehension to create a new list with squares of the numbers\n",
-    "squares = [x**2 for x in numbers]\n",
-    "\n",
-    "print(squares)"
-   ]
   }
  ],
  "metadata": {
